# hophop

./: .#hop.c  .#mgmres.h  .gitignore  .nfs000000000006044f00000009  CITATION.rst  CMakeLists.txt  CONTRIBUTING.rst  COPYRIGHT  Makefile  README  README.rst  Units.nb  analytic.c  analytics.c  be.c  cmdline.c  cmdline.h  gmon.out  helper.c  hop  hop.c  hop.c~  hop.h  hop.h~  mc.c  mc.c~  mc.h  mc.h~  mc_analyze.c  mc_analyze.c~  mc_free.c  mc_hopping.c  mc_hopping.c~  mc_init.c  mc_init.c~  mgmres.c  mgmres.h  options.ggo  options.ggo.in  output.c  (+4 more)
cmake/: FindGSL.cmake  FindLis.cmake  FindOpenMP.cmake
doc/: README.html
docs/: CMakeLists.txt  algorithm.rst  conf.py  index.rst  install.rst  io.rst  parallel.rst
mc/: analyze_mc.c  hopping_mc.c  init_mc.c  mc.h
res/: README.rst  config.h.in  hoptools.py  options.ggo  options.ggo.in  pre-commit  summaryparser.py
src/: CMakeLists.txt  analytics.c  be.c  cmdline.c  helper.c  hop.c  hop.h  mc.c  mc_analyze.c  mc_hopping.c  mc_init.c  output.c  params.c
src/cli/: CMakeLists.txt  cmdline.c  cmdline.h  options.ggo
test3/: params.conf
